--- a/src/main/resources/templates/memberPages/loginPage.html
+++ b/src/main/resources/templates/memberPages/loginPage.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <th:block th:replace="~{component/config :: config}"></th:block>
 </head>
 <body>
+<div th:replace="~{component/header :: header}"></div>
+<div th:replace="~{component/nav :: nav}"></div>
+<h2 class="text-center">loginPage</h2>
+<div class="container mt-5 mb-5 align-items-center">
+    <form class="card p-3 col-4 align-content-center" action="/member/login" method="post">
+        <div class="card-header">
+            <h2 class="text-center">로그인</h2>
+        </div>
+        <div class="card-body justify-content-center">
+            이메일: <input type="text" placeholder="로그인 이메일" name="loginEmail" class="mb-2"> <br>
+            비밀번호: <input type="password" placeholder="로그인 비밀번호" name="loginPassword">
+        </div>
+        <div class="card-footer">
+            <input type="submit" class="btn btn-primary" value="로그인!" onclick="login_fn()">
+        </div>
+    </form>
+</div>
+
+<div th:replace="~{component/footer :: footer}"></div>
 
 </body>
 </html>
