--- a/src/main/resources/templates/memberPages/loginMain.html
+++ b/src/main/resources/templates/memberPages/loginMain.html
@@ -8,8 +8,7 @@
 <div th:replace="~{component/loginNav :: loginNav}"></div>
 
 <div class="container mt-5 mb-5">
-  <!-- 화면에 보여질 내용이 들어갈 부분 -->
-
+<h2 class="text-center mt-2"> loginMain </h2>
 </div>
 
 <div th:replace="~{component/footer :: footer}"></div>
