--- a/src/main/resources/templates/memberPages/loginPage.html
+++ b/src/main/resources/templates/memberPages/loginPage.html
@@ -6,7 +6,7 @@
 <body>
 <div th:replace="~{component/header :: header}"></div>
 <div th:replace="~{component/nav :: nav}"></div>
-<h2 class="text-center">loginPage</h2>
+<h2 class="text-center mt-2">loginPage</h2>
 <div class="container mt-5 mb-5 align-items-center">
     <form class="card p-3 col-4 align-content-center" action="/member/login" method="post">
         <div class="card-header">
